syntax = "proto3";

package auth;

option java_package = "com.wwttr.player";
option java_outer_classname = "Api";
option java_generic_services = true;

service PlayerService {
  rpc CreatePlayer (CreatePlayerRequest) returns (Player);
  rpc DeletePlayer (DeletePlayerRequest) returns (Empty);
  rpc GetPlayer (GetPlayerRequest) returns (Player);
  rpc ListPlayers (ListPlayersRequest) returns (ListPlayersResponse);
}





message CreatePlayerRequest {

}

message UpdatePlayerRequest {

}

message DeletePlayerRequest {

}

message GetPlayerRequest {

}

message ListPlayersRequest {

}

message ListPlayersResponse {

}

message Empty {}
